fix global styles, fix overflow in pop-over

--- a/src/app/pages/vote/popover/popover.page.scss
+++ b/src/app/pages/vote/popover/popover.page.scss
@@ -22,6 +22,7 @@ ion-card {
 
       ion-card-title {
         font-weight: bold;
+        overflow: hidden;
       }
     }
   }
