--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -7,8 +7,8 @@
   --ion-color-primary-rgb: 33,49,61;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 0,0,0;
-  --ion-color-primary-shade: #737ede;
-  --ion-color-primary-tint: #8f9afc;
+  --ion-color-primary-shade: linear-gradient(0deg, rgb(44, 211, 203) 0%, rgb(114, 125, 223) 50%, rgb(136, 85, 218) 100%);
+  --ion-color-primary-tint: linear-gradient(0deg, rgb(44, 211, 203) 0%, rgb(114, 125, 223) 50%, rgb(136, 85, 218) 100%);
 
   --ion-color-secondary: #ffffff;
   --ion-color-secondary-rgb: 255,255,255;
@@ -28,8 +28,8 @@
   --ion-color-success-rgb: 16,220,96;
   --ion-color-success-contrast: #ffffff;
   --ion-color-success-contrast-rgb: 255,255,255;
-  --ion-color-success-shade: #0ec254;
-  --ion-color-success-tint: #28e070;
+  --ion-color-success-shade: linear-gradient(0deg, rgb(131, 82, 209) 0%, rgb(107, 118, 212) 50%, rgb(119, 165, 221) 100%);
+  --ion-color-success-tint: linear-gradient(0deg, rgb(131, 82, 209) 0%, rgb(107, 118, 212) 50%, rgb(119, 165, 221) 100%);
 
   --ion-color-warning: linear-gradient(30deg,rgb(239, 246, 253) 50%, rgb(241, 241, 241) 100%);
   --ion-color-warning-rgb: 255,255,255;
@@ -42,8 +42,8 @@
   --ion-color-danger-rgb: 245,61,61;
   --ion-color-danger-contrast: #ffffff;
   --ion-color-danger-contrast-rgb: 0,0,0;
-  --ion-color-danger-shade: #79a8e0;
-  --ion-color-danger-tint: #96c5fe;
+  --ion-color-danger-shade: linear-gradient(30deg,rgb(114, 160, 216) 50%, rgb(44, 209, 201) 100%);
+  --ion-color-danger-tint: linear-gradient(30deg,rgb(114, 160, 216) 50%, rgb(44, 209, 201) 100%);
 
   --ion-color-dark: #222428;
   --ion-color-dark-rgb: 34,34,34;
